# priv

./: .gitignore  Dockerfile  README.md  compose.yaml  db.ts  deno.json  ingest.ts  priv.cabal  schema.sql  serve.ts
app/: Main.hs
scripts/: deno-dl-sqlite.ts
src/: db.ts  ingest.ts  serve.ts  utils.ts
